# woof

./: .gitignore  Cargo.toml  build.rs
.sqlx/: query-055bf1a84af911c3bc342bad2b29d6ca7ba4360d077a0891c3d6b729d809e86d.json  query-3584e2bc93c663f7975c5ccb04284d7b3a0937a8aaff29a21195a4cb8022625f.json  query-3a7ca0785fad1d918f61dc1dc988d9cbbe9c165fa58543a99b67e6837007d11c.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-948acecb661d8231baa0c164400aa784d9d849a0f1352dec8b18a5ce2c1e458a.json  query-95a4102b03c5735fb0cec4ef2157e109cc456ecdb2a1966782b00ac93182fb70.json  query-e0eebacea6ec8771aa90bbdadfa265a796f9f4fa239517782ca5928089e5dea5.json
migrations/: 20231129221808_initial.sql
sql/: get_paste_by_id.sql  get_slug_by_slug.sql  get_user_by_username.sql  insert_credential.sql  insert_paste.sql  insert_user.sql
src/: config.rs  main.rs  templates.rs
src/auth/: mod.rs
src/auth/passkeys/: authentication.rs  backend.rs  mod.rs  registration.rs
src/db/: credentials.rs  mod.rs  pastes.rs  slugs.rs  users.rs
src/frontend/: mod.rs  paste.rs
src/http/: error.rs  mod.rs  pastes.rs
src/tus/: extensions.rs  mod.rs
src/tus/headers/: mod.rs  tus_extension.rs  tus_resumable.rs  tus_version.rs  upload_length.rs  upload_offset.rs
static/: style.css  work-sans.css
templates/: auth.html  base.html  error.html  index.html  new_paste.html  paste.html
templates/components/: paste_card.html  upload_tile.html
templates/svg/: upload_icon.html
woof-passkey-login/: Cargo.toml  README.md
woof-passkey-login/src/: auth.rs  lib.rs  svg.rs  utils.rs  views.rs
