[package]
name = "woof-passkey-login"
version = "0.1.0"
authors = ["videah <videah@selfish.systems>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
seed = { version = "0.10.0", features = ["routing"] }
gloo-net = "0.4.0"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
webauthn-rs-proto = { version = "0.5.0-dev", features = ["wasm"] }
wasm-bindgen-futures = "0.4.39"
gloo-timers = "0.3.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "CredentialCreationOptions",
    "CredentialRequestOptions",
    "CredentialsContainer",
    "Navigator",
    "PublicKeyCredential",
    "PublicKeyCredentialCreationOptions",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
